add event to add order details via created order
