# openapi.yaml
@@ -1700,10 +1700,15 @@ paths:
                   type: integer
                 orderPaymentTypeId:
                   type: integer
-                productsId:
+                orderDetails:
                   type: array
                   items:
-                    type: integer
+                    type: object
+                    properties:
+                      productsId:
+                        type: integer
+                      quantity:
+                        type: integer
       responses:
         "201":
           description: Order created.
