# src/order/dto/createOrder.dto.ts
@@ -1,4 +1,24 @@
-import { IsArray, IsNumber, IsOptional } from 'class-validator';
+import { Type } from 'class-transformer';
+import {
+  ArrayMinSize,
+  IsArray,
+  IsNotEmpty,
+  IsNumber,
+  IsOptional,
+  Min,
+  ValidateNested,
+} from 'class-validator';
+
+class CreateOrderDetails {
+  @IsNumber()
+  @IsNotEmpty()
+  public productId: number;
+
+  @IsNumber()
+  @IsNotEmpty()
+  @Min(1)
+  public quantity: number;
+}
 
 export class CreateOrderDto {
   @IsNumber()
@@ -8,6 +28,9 @@ export class CreateOrderDto {
   public orderPaymentTypeId: number;
 
   @IsArray()
+  @ArrayMinSize(1)
+  @ValidateNested({ each: true })
+  @Type(() => CreateOrderDetails)
   @IsOptional()
-  public productsId?: number[];
+  public orderDetails?: CreateOrderDetails[];
 }
